tests/baselines/reference/classDeclarationLoop.errors.txt
classDeclarationLoop.ts(6,14): error TS2345: Argument of type 'typeof C' is not assignable to parameter of type 'never'.


==== classDeclarationLoop.ts (1 errors) ====
    const arr = [];
    for (let i = 0; i < 10; ++i) {
        class C {
            prop = i;
        }
        arr.push(C);
                 ~
!!! error TS2345: Argument of type 'typeof C' is not assignable to parameter of type 'never'.
    }
    